--- a/Assignment2/style.css
+++ b/Assignment2/style.css
@@ -1,15 +1,21 @@
 body{
-    margin:0;
+    margin:0 auto;
+}
+.container{
+    margin: auto;
+    text-align: center;
+    width: 100%;
+    background-color: azure;
 }
 .div1,.div2{
-    margin:0 auto;
+    height: 100vh;
     float: left;
+    margin:0 auto;
     text-align: center;
-    padding:20px;
-    width: 40%;
-    background-color: cadetblue;
+    width: 50%;
+    height: 95vh;
 }
 .items{
-    padding:5px;
+    padding:5px 5px 5px 150px;
     text-align: left;
 }
